Mr Hyde was here …

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:        Farhad Sotothe
 tagline:      'Farhad Sotothe'
-description:  'Student of Computer Science at the university of Jahad Daneshgahi of Mashhad'
+description:  'Student of Computer Science at Jahad Daneshgahi university of Mashhad'
 url:    http://sotothe.github.io
 version:      1.1.1
 author:
