--- a/fa/_config.yml
+++ b/fa/_config.yml
@@ -1,10 +1,10 @@
-title:        Farhad Sotothe
-tagline:      'Farhad Sotothe'
-description:  'Student of Computer Science at Iranian academic center for education, culture and research, Mashhad'
+title:        فرهاد ستوده
+tagline:      'فرهاد ستوده'
+description:  'توضیحات'
 url:    http://sotothe.github.io
 version:      1.1.1
 author:
-  name:       Farhad Sotothe
+  name:       فرهاد ستوده
   email:      so.to.the@gmail.com
 permalink:    pretty
 pygments:     true
