--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:        Farhad Sotothe
 tagline:      'Farhad Sotothe'
 description:  'Student of Computer Science at Iranian academic center for education, culture and research, Mashhad'
-url:    http://sotothe.github.io
+url:    https://sotothe.github.io
 version:      1.1.1
 author:
   name:       Farhad Sotothe
